--- a/packages/vue-common/package.json
+++ b/packages/vue-common/package.json
@@ -15,7 +15,8 @@
     "jsencrypt": "^3.2.1",
     "lodash-es": "^4.17.21",
     "sm-crypto": "^0.3.10",
-    "vue": "^2.7.8"
+    "vue": "^2.7.8",
+    "xss": "^1.0.14"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
