chore: upgrade pnpm8

--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,4 @@
 engine-strict = true
+dedupe-peer-dependents = false
+# To fix the docs issue: caught TypeError: AllHtmlEntities is not a constructor
 hoist-pattern[]=!html-entities
