--- a/packages/vue-common/package.json
+++ b/packages/vue-common/package.json
@@ -7,15 +7,9 @@
     "dev": "vue-cli-service serve"
   },
   "dependencies": {
-    "axios": "~0.21.4",
     "core-js": "^3.24.1",
-    "crypto-js": "^3.3.0",
     "element-ui": "^2.15.9",
-    "jsencrypt": "^3.2.1",
-    "lodash-es": "^4.17.21",
-    "sm-crypto": "^0.3.10",
-    "vue": "^2.7.14",
-    "xss": "^1.0.14"
+    "vue": "^2.7.14"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
