--- a/packages/vue-micro/package.json
+++ b/packages/vue-micro/package.json
@@ -7,6 +7,7 @@
     "dev": "vue-cli-service serve"
   },
   "dependencies": {
+    "core-js": "^3.24.1",
     "element-ui": "^2.15.9",
     "vue": "^2.7.14"
   },
